force-app/main/default/objects/Creds__mdt/Creds__mdt.object-meta.xml
<CustomObject>
    <label>Creds</label>
    <pluralLabel>Creds</pluralLabel>
</CustomObject>