force-app/main/default/objects/Creds__mdt/fields/agentID__c.field-meta.xml
<CustomField>
    <fullName>agentID__c</fullName>
    <label>agentID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>