force-app/main/default/objects/Creds__mdt/fields/ApiEndPoint__c.field-meta.xml
<CustomField>
    <fullName>ApiEndPoint__c</fullName>
    <label>ApiEndPoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>