force-app/main/default/objects/Creds__mdt/fields/tokenEndpoint__c.field-meta.xml
<CustomField>
    <fullName>tokenEndpoint__c</fullName>
    <label>tokenEndpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>